Fix small overlays map button on mobile (hopefully)
For #176

--- a/pepysdiary/common/static/common/src/sass/partials/_map.scss
+++ b/pepysdiary/common/static/common/src/sass/partials/_map.scss
@@ -47,6 +47,10 @@ a.leaflet-control-layers-toggle {
         content: "Add overlays in London";
     }
 }
+.leaflet-touch .leaflet-control-layers-toggle {
+  /* Otherwise gets set to 44px. */
+  width: auto;
+}
 .leaflet-retina a.leaflet-control-layers-toggle {
   background-image: none;
 }
